--- a/template.yaml
+++ b/template.yaml
@@ -41,8 +41,8 @@ Resources:
     Properties:
       StageName: Prod
       Cors:
-        AllowMethods: "'GET,POST,PUT,DELETE,OPTIONS'"
-        AllowHeaders: "'Content-Type,Authorization'"
+        AllowMethods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
+        AllowHeaders: "'Content-Type,X-Amz-Date,X-Amz-Security-Token,Authorization,X-Api-Key,X-Requested-With,Accept,Access-Control-Allow-Methods,Access-Control-Allow-Origin,Access-Control-Allow-Headers'"
         AllowOrigin: "'http://localhost:5173'"
         MaxAge: "'600'"
         AllowCredentials: true
@@ -70,7 +70,14 @@ Resources:
             RestApiId: !Ref LightMeasurementApi
             Path: /measure
             Method: POST
-
+        Options:
+          Type: Api
+          Properties:
+            RestApiId: !Ref LightMeasurementApi
+            Path: /measure/{id}
+            Method: options
+            Auth:
+              ApiKeyRequired: false
     Metadata:
       BuildMethod: esbuild
       BuildProperties:
@@ -92,7 +99,6 @@ Resources:
         Variables:
           TABLE_NAME: !Ref LightMeasurementsTable
           INDEX_NAME: YearMonthIndex
-
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref LightMeasurementsTable
@@ -103,7 +109,14 @@ Resources:
             RestApiId: !Ref LightMeasurementApi
             Path: /measure/{id}
             Method: GET
-
+        Options:
+          Type: Api
+          Properties:
+            RestApiId: !Ref LightMeasurementApi
+            Path: /measure/{id}
+            Method: options
+            Auth:
+              ApiKeyRequired: false
     Metadata:
       BuildMethod: esbuild
       BuildProperties:
@@ -136,7 +149,14 @@ Resources:
             RestApiId: !Ref LightMeasurementApi
             Path: /measure/{id}
             Method: PUT
-
+        Options:
+          Type: Api
+          Properties:
+            RestApiId: !Ref LightMeasurementApi
+            Path: /measure/{id}
+            Method: options
+            Auth:
+              ApiKeyRequired: false
     Metadata:
       BuildMethod: esbuild
       BuildProperties:
@@ -169,7 +189,14 @@ Resources:
             RestApiId: !Ref LightMeasurementApi
             Path: /measure/{id}
             Method: DELETE
-
+        Options:
+          Type: Api
+          Properties:
+            RestApiId: !Ref LightMeasurementApi
+            Path: /measure/{id}
+            Method: options
+            Auth:
+              ApiKeyRequired: false
     Metadata:
       BuildMethod: esbuild
       BuildProperties:
@@ -201,6 +228,14 @@ Resources:
           Properties:
             Path: /measure/search
             Method: GET
+        Options:
+          Type: Api
+          Properties:
+            RestApiId: !Ref LightMeasurementApi
+            Path: /measure/{id}
+            Method: options
+            Auth:
+              ApiKeyRequired: false
     Metadata:
       BuildMethod: esbuild
       BuildProperties:
