fix(api): correction LightMeasurementApi

--- a/template.yaml
+++ b/template.yaml
@@ -43,7 +43,7 @@ Resources:
       Cors:
         AllowMethods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
         AllowHeaders: "'Content-Type,X-Amz-Date,X-Amz-Security-Token,Authorization,X-Api-Key,X-Requested-With,Accept,Access-Control-Allow-Methods,Access-Control-Allow-Origin,Access-Control-Allow-Headers'"
-        AllowOrigin: "'http://localhost:5173'"
+        AllowOrigin: "'*'"
         MaxAge: "'600'"
         AllowCredentials: true
 
@@ -201,7 +201,12 @@ Resources:
             RestApiId: !Ref LightMeasurementApi
             Path: /measure/search
             Method: GET
-
+        Preflight:
+          Type: Api
+          Properties:
+            RestApiId: !Ref LightMeasurementApi
+            Path: /measure/search
+            Method: OPTIONS
     Metadata:
       BuildMethod: esbuild
       BuildProperties:
