--- a/template.yaml
+++ b/template.yaml
@@ -43,7 +43,7 @@ Resources:
       Cors:
         AllowMethods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
         AllowHeaders: "'Content-Type,X-Amz-Date,X-Amz-Security-Token,Authorization,X-Api-Key,X-Requested-With,Accept,Access-Control-Allow-Methods,Access-Control-Allow-Origin,Access-Control-Allow-Headers'"
-        AllowOrigin: "'*'"
+        AllowOrigin: "'http://localhost:5173'"
         MaxAge: "'600'"
         AllowCredentials: true
 
