--- a/template.yaml
+++ b/template.yaml
@@ -10,6 +10,11 @@ Globals:
   Function:
     Timeout: 3
 
+Parameters:
+  AllowedOrigin:
+    Type: String
+    Default: "'http://react-native-light.s3-website-us-east-1.amazonaws.com'"
+
 Resources:
   LightMeasurementsTable:
     Type: AWS::DynamoDB::Table
@@ -43,7 +48,7 @@ Resources:
       Cors:
         AllowMethods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
         AllowHeaders: "'Content-Type,X-Amz-Date,X-Amz-Security-Token,Authorization,X-Api-Key,X-Requested-With,Accept,Access-Control-Allow-Methods,Access-Control-Allow-Origin,Access-Control-Allow-Headers'"
-        AllowOrigin: "'http://react-native-light.s3-website-us-east-1.amazonaws.com'"
+        AllowOrigin: !Ref AllowedOrigin
         MaxAge: "'600'"
         AllowCredentials: true
 
@@ -59,7 +64,7 @@ Resources:
         Variables:
           TABLE_NAME: !Ref LightMeasurementsTable
           INDEX_NAME: YearMonthIndex
-          DNS_CLIENT: !Ref LightMeasurementApi.Cors.AllowOrigin
+          DNS_CLIENT: !Ref AllowedOrigin
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref LightMeasurementsTable
@@ -190,7 +195,7 @@ Resources:
         Variables:
           TABLE_NAME: !Ref LightMeasurementsTable
           INDEX_NAME: YearMonthIndex
-          DNS_CLIENT: !Ref LightMeasurementApi.Cors.AllowOrigin
+          DNS_CLIENT: !Ref AllowedOrigin
 
       Policies:
         - DynamoDBCrudPolicy:
