--- a/template.yaml
+++ b/template.yaml
@@ -13,7 +13,7 @@ Globals:
 Parameters:
   AllowedOrigin:
     Type: String
-    Default: "http://react-native-light.s3-website-us-east-1.amazonaws.com"
+    Default: "http://localhost:5173"
 
 Resources:
   LightMeasurementsTable:
@@ -64,7 +64,6 @@ Resources:
         Variables:
           TABLE_NAME: !Ref LightMeasurementsTable
           INDEX_NAME: YearMonthIndex
-          DNS_CLIENT: !Ref AllowedOrigin
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref LightMeasurementsTable
