fix: change allow origin

--- a/template.yaml
+++ b/template.yaml
@@ -10,11 +10,6 @@ Globals:
   Function:
     Timeout: 3
 
-Parameters:
-  AllowedOrigin:
-    Type: String
-    Default: "http://localhost:5173"
-
 Resources:
   LightMeasurementsTable:
     Type: AWS::DynamoDB::Table
@@ -48,7 +43,7 @@ Resources:
       Cors:
         AllowMethods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
         AllowHeaders: "'Content-Type,X-Amz-Date,X-Amz-Security-Token,Authorization,X-Api-Key,X-Requested-With,Accept,Access-Control-Allow-Methods,Access-Control-Allow-Origin,Access-Control-Allow-Headers'"
-        AllowOrigin: !Ref AllowedOrigin
+        AllowOrigin: "'http://localhost:5173'"
         MaxAge: "'600'"
         AllowCredentials: true
 
